fix jump

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 .game-board {
     width: 100%;
-    height: 500px;
+    height: 600px;
     border-bottom: 15px solid rgb(35, 160, 35);
     margin: 0 auto;
     position: relative;
@@ -18,7 +18,7 @@
     position: absolute;
     bottom: 0;
     width: 80px;
-    animation: pipe-animation 1.3s infinite linear;
+    animation: pipe-animation 1.6s infinite linear;
 }
 
 .mario { 
@@ -32,7 +32,15 @@
 }
 
 .clouds {
-    width: 550px;
+    width: 450px;
+    position: absolute;
+    animation: clouds-animation 20s infinite linear;
+}
+
+h1 {
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 900;
+    position: absolute;
 }
 
 @keyframes pipe-animation {
@@ -49,20 +57,46 @@
     0% {
         bottom: 0;
     }
-
+    10% {
+        bottom: 50px;
+    }
+    20% {
+        bottom: 100px;
+    }
+    30% {
+        bottom: 150px;
+    }
     40% {
-        bottom: 180px;
+        bottom: 190px;
     }
 
     50% {
-        bottom: 180px;
+        bottom: 190px;
     }
 
     60% {
-        bottom: 180px;
+        bottom: 190px;
     }
-
+    70% {
+        bottom: 150px;
+    }
+    80% {
+        bottom: 100px;
+    }
+    90% {
+        bottom: 50px;
+    }
     100% {
         bottom: 0;
+    }
+}
+
+@keyframes clouds-animation {
+    from {
+        right: -700px;
+    }
+
+    to {
+        right: 100%;
     }
 }
